--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="text-center">
-  <input [(ngModel)]="register.username" type="text">
-  <input [(ngModel)]="register.password" type="password">
-  <input [(ngModel)]="register.email" type="text">
+  <input [(ngModel)]="register.username" placeholder="username" ><br>
+  <input [(ngModel)]="register.password" placeholder="password" type="password"><br>
+  <input [(ngModel)]="register.email" placeholder="email"><br>
   <button (click)='registerUser()'>Sign up</button>
 </div>
