--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
     
     <div class="signin-signup form-group">
      
-      
+
 
   <input class="form-control" [(ngModel)]="register.username" placeholder="username" ><br>
   <input class="form-control" [(ngModel)]="register.password" placeholder="password" type="password"><br>
@@ -21,9 +21,11 @@
         <p>
         Proceed to the login page and log in to your account
         </p>
-        <a href="#"><button class="btn transparent" id="sign-up-btn">
+        <button class="btn transparent" id="sign-up-btn"
+        routerLink="/login"
+        >
           Log in
-        </button> </a>
+        </button> 
       </div>
       <img src=  "#" class="image" alt="" />
     </div>
