adding login form and styling

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -27,7 +27,7 @@
           Log in
         </button> 
       </div>
-      <img src=  "#" class="image" alt="" />
+      <img src="assets/register.svg" class="image" alt="" />
     </div>
 
   </div>
