--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+
+<div class="container">
+  <div class="forms-container">
+    <div class="signin-signup form-group">
+
+
+      <input class="form-control" [(ngModel)]="input.username" placeholder="username" ><br>
+      <input class="form-control" [(ngModel)]="input.password" placeholder="password" type="password"><br>
+      <input class="form-control" [(ngModel)]="input.email" placeholder="email"><br>
+      <button class="btn btn-primary" (click)='onLogin()'>Log in</button>
+
+
+
+    
+    </div>
+  </div>
+
+  <div class="panels-container">
+    <div class="panel left-panel">
+      <div class="content">
+        <h3>New here ?</h3>
+        <p>
+          Sign up to our site where you can review and post other users project
+
+        </p>
+       <button class="btn transparent" id="sign-up-btn"
+       routerLink="/"
+       >
+          Sign up
+        </button>
+      </div>
+      <img src=  "assets/log.svg" class="image" alt="" />
+    </div>
+    
+  </div>
+</div>
