adding method to cosume neighbourhood API endpoints

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,32 +1,21 @@
 
 <nav>
   <ul>
-    <li class="logo"><a href="/" style="text-decoration: none; color: white;">Watch-Dog </li>
+    <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="/">Business</a>
+        <a class="" href="#">Business</a>
       </li>
-      <li class="">
-      Neighborhoods
+      <li class=" ">
+        <a class="" href="#">Hoods</a>
       </li>
-      <li class="">
-        Profile
-        </li>
+      <li class=" ">
+        <a class="" href="#">Profile</a>
+      </li>
     </div>
 
 
 
-  <form class="form" role="search" action="#">
-    <li class="search-icon">
-
-      <input type="search" placeholder="search projects" name="project" id="">
-      
-      <div class="input-group-btn">
-        <button class="btn btn-default" type="submit"><i class="fa fa-search" style="background: white; border-radius: 50px;"></i></button>
-      </div>
-   
-    </li>
-
-     </form>
+  
   </ul>
 </nav>
