subscribing to hood service

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -7,7 +7,7 @@
         <a class="" href="#">Business</a>
       </li>
       <li class=" ">
-        <a class="" href="#">Hoods</a>
+        <a class="" href="/hood">Hoods</a>
       </li>
       <li class=" ">
         <a class="" href="#">Profile</a>
