--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -13,9 +13,10 @@
         <a class="" href="#">Profile</a>
       </li>
     </div>
-
-
-
   
   </ul>
 </nav>
+
+<div class="container-fluid">
+  
+</div>
