--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 
+.container-fluid{
+  background: url('/src/assets/background.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  color: white;
+}
 
 nav{
   background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
@@ -85,6 +92,9 @@ nav ul .search-icon .icon span{
   color: #222222;
   font-size: 18px;
 }
+
+
+
 
 
 @media screen and(max-width:1052px) {
