--- a/src/app/business/edit-buiness/edit-buiness.component.html
+++ b/src/app/business/edit-buiness/edit-buiness.component.html
@@ -1,14 +1,14 @@
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
 (click)="addClick()"
 data-backdrop="static" data-keyboard="false"
 >
   Edit hood
-</button>
+</button> -->
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -28,4 +28,4 @@ data-backdrop="static" data-keyboard="false"
       </div>
     </div>
   </div>
-</div>
+</div> -->
