--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="#">Business</a>
+        <a class="" href="/business">Business</a>
       </li>
       <li class=" ">
         <a class="" href="/hood">Hoods</a>
@@ -18,5 +18,5 @@
 </nav>
 
 <div class="container-fluid">
-  
+
 </div>
