--- a/src/app/hood/hood.component.html
+++ b/src/app/hood/hood.component.html
@@ -5,7 +5,7 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="#">Business</a>
+        <a class="" href="/business">Business</a>
       </li>
       <li class=" ">
         <a class="" href="/hood">Hoods</a>
