--- a/src/app/business/edit-buiness/edit-buiness.component.html
+++ b/src/app/business/edit-buiness/edit-buiness.component.html
@@ -1,31 +1,42 @@
 
-<!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-(click)="addClick()"
-data-backdrop="static" data-keyboard="false"
->
-  Edit hood
-</button> -->
 
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"
-        (click)="closeClick"
-        >Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">name</label>
+  <div class="cpl-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="name" placeholder="enter name of the business" >
   </div>
-</div> -->
+</div>
+
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">Description</label>
+  <div class="cpl-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="description" >
+  </div>
+</div>
+
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">email</label>
+  <div class="cpl-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="email" >
+  </div>
+</div>
+
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">user</label>
+  <div class="cpl-sm-10">
+    <input type="number" class="form-control" [(ngModel)]="user" >
+  </div>
+</div>
+
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">neighbourhood</label>
+  <div class="cpl-sm-10">
+    <input type="number" class="form-control" [(ngModel)]="neighbourhood" >
+  </div>
+</div>
+<button (click)="addbusiness()"  class="btn btn-primary">Add</button>
