adding posts through service

--- a/src/app/hood/hood.component.html
+++ b/src/app/hood/hood.component.html
@@ -5,6 +5,9 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
+        <a class="" href="/landing">posts</a>
+      </li>
+      <li class=" ">
         <a class="" href="/business">Business</a>
       </li>
       <li class=" ">
