--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -5,20 +5,9 @@
 <nav>
   <ul>
     <li class="logo">Watch-Dog </li>
-    <li class="logo" > <a class="" href="/landing">Home</a> </li>
     <div class="items">
       <li class=" ">
-   
-  <a>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-(click)="addClick()"
-data-backdrop="static" data-keyboard="false"
->
-<i class="fa fa-plus" aria-hidden="true"></i> business
-</button>
-</a>
-
+        <a class="" href="/landing">posts</a>
       </li>
       <li class=" ">
         <a class="" href="/hood">Hoods</a>
@@ -32,6 +21,16 @@ data-backdrop="static" data-keyboard="false"
   </ul>
 </nav>
 <br>
+
+<p class="text-center">
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+  (click)="addClick()"
+  data-backdrop="static" data-keyboard="false"
+  >
+  <i class="fa fa-plus" aria-hidden="true"></i> business
+  </button>
+</p>
 
 <div class="container mt-5"  *ngFor="let item of BusinessList">
   <div class="card">
