--- a/src/app/landing/add-edit-post/add-edit-post.component.html
+++ b/src/app/landing/add-edit-post/add-edit-post.component.html
@@ -1,1 +1,36 @@
-<p>add-edit-post works!</p>
+
+
+<div class="form-group row" style="width: 60%;">
+  <label for="col-sm-2 col-form-label">name</label>
+  <div class="cpl-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="name" placeholder="enter name your name" >
+  </div>
+</div>
+
+
+<div class="form-group row" style="width: 60%;">
+  <label for="col-sm-2 col-form-label">Hood</label>
+  <div class="cpl-sm-10">
+    <select class="form-control" [(ngModel)]="hood">
+      <option >Select</option>
+      <option *ngFor="let hood of HoodList">{{hood.name}}</option>
+    </select>
+
+  </div>
+</div>
+
+<div class="form-group row">
+  <label for="col-sm-2 col-form-label">Post</label>
+  <div class="cpl-sm-10">
+
+    <textarea [(ngModel)]="post" rows="4" cols="50">
+      </textarea>
+  </div>
+</div>
+
+
+
+
+
+
+<button (click)="addPost()"  class="btn btn-primary">Add</button>
