--- a/src/app/business/edit-buiness/edit-buiness.component.html
+++ b/src/app/business/edit-buiness/edit-buiness.component.html
@@ -12,31 +12,17 @@
 <div class="form-group row">
   <label for="col-sm-2 col-form-label">Description</label>
   <div class="cpl-sm-10">
-    <input type="text" class="form-control" [(ngModel)]="description" >
+    <textarea cols="30" rows="10" class="form-control" [(ngModel)]="description" >
+</textarea>
   </div>
 </div>
 
 
-<div class="form-group row">
-  <label for="col-sm-2 col-form-label">email</label>
-  <div class="cpl-sm-10">
-    <input type="text" class="form-control" [(ngModel)]="email" >
-  </div>
-</div>
 
 
-<div class="form-group row">
-  <label for="col-sm-2 col-form-label">user</label>
-  <div class="cpl-sm-10">
-    <input type="number" class="form-control" [(ngModel)]="user" >
-  </div>
-</div>
 
 
-<div class="form-group row">
-  <label for="col-sm-2 col-form-label">neighbourhood</label>
-  <div class="cpl-sm-10">
-    <input type="number" class="form-control" [(ngModel)]="neighbourhood" >
-  </div>
-</div>
-<button (click)="addbusiness()"  class="btn btn-primary">Add</button>
+
+<button *ngIf="biz.name==0"  (click)="addbusiness()" class="btn btn-primary">Add</button>
+&nbsp;
+<button *ngIf="biz.name" (click)="updatebusiness()"  class="btn btn-primary">Update</button>
