changing api url from local to deployed

--- a/src/app/business/edit-buiness/edit-buiness.component.html
+++ b/src/app/business/edit-buiness/edit-buiness.component.html
@@ -20,6 +20,12 @@
 
 
 
+<div *ngIf="biz.name==0" class="form-group row">
+  <label for="col-sm-2 col-form-label">email</label>
+  <div class="cpl-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="email" >
+  </div>
+</div>
 
 
 
