fixing routing issues

--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -7,10 +7,10 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="/landing">posts</a>
+        <a class="" routerLink ="/landing">posts</a>
       </li>
       <li class=" ">
-        <a class="" href="/hood">Hoods</a>
+        <a class="" routerLink ="/hood">Hoods</a>
       </li>
       
     </div>
