--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,10 +4,10 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="/business">Business</a>
+        <a class="" routerLink ="/business">Business</a>
       </li>
       <li class=" ">
-        <a class="" href="/hood">Hoods</a>
+        <a class="" routerLink ="/hood">Hoods</a>
       </li>
     </div>
   
