--- a/src/app/hood/hood.component.html
+++ b/src/app/hood/hood.component.html
@@ -5,13 +5,13 @@
     <li class="logo">Watch-Dog </li>
     <div class="items">
       <li class=" ">
-        <a class="" href="/landing">posts</a>
+        <a class="" routerLink ="/landing">posts</a>
       </li>
       <li class=" ">
-        <a class="" href="/business">Business</a>
+        <a class="" routerLink ="/business">Business</a>
       </li>
       <li class=" ">
-        <a class="" href="/hood">Hoods</a>
+        <a class="" routerLink ="/hood">Hoods</a>
       </li>
     </div>
 
